--- a/kubernetes/base/backend-deployment.yaml
+++ b/kubernetes/base/backend-deployment.yaml
@@ -15,23 +15,27 @@ spec:
       containers:
       - name: backend
         image: saas-platform-backend
-        ports:
-        - containerPort: 8000
-        env:
-        - name: POSTGRES_SERVER
-          value: postgres
-        - name: REDIS_HOST
-          value: redis
+        resources:
+          requests:
+            cpu: 500m
+            memory: 512Mi
+          limits:
+            cpu: 1000m
+            memory: 1Gi
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8000
+          initialDelaySeconds: 5
+          periodSeconds: 10
         livenessProbe:
           httpGet:
             path: /health
             port: 8000
-          initialDelaySeconds: 30
-          periodSeconds: 10
-        resources:
-          limits:
-            cpu: "1"
-            memory: "1Gi"
-          requests:
-            cpu: "500m"
-            memory: "512Mi"
+          initialDelaySeconds: 15
+          periodSeconds: 20
+        env:
+        - name: REDIS_HOST
+          value: redis-master
+        - name: DB_HOST
+          value: postgres-master
